--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <img src="https://cdn.winsightmedia.com/platform/files/public/800x420/chef-demo-cooking-saucing-dish-rb.jpg" alt="">
+    <h2> Some recipes:</h2>
+    <ol>
+        <li><a href="">Guacamole</a></li>
+        <li><a href=""></a>Buffalo Chicken Dip</li>
+        <li><a href=""></a>Homemade Chili</li>
+    </ol>
 </body>
 </html>
