--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <img src="https://cdn.winsightmedia.com/platform/files/public/800x420/chef-demo-cooking-saucing-dish-rb.jpg" alt="">
     <h2> Some recipes:</h2>
-    <ol>
-        <li><a href="">Guacamole</a></li>
-        <li><a href=""></a>Buffalo Chicken Dip</li>
-        <li><a href=""></a>Homemade Chili</li>
-    </ol>
+    <ul>
+        <li><a href="./pages/guacamole.html">Guacamole</a></li>
+        <li><a href="./pages/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
+        <li><a href="./pages/homemade-chili.html">Homemade Chili</a></li>
+    </ul>
 </body>
 </html>
