Complete information in HTML files

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="https://cdn.winsightmedia.com/platform/files/public/800x420/chef-demo-cooking-saucing-dish-rb.jpg" alt="">
-    <h2> Some recipes:</h2>
+    <p>Wellcome!!. This website will show you some popular dip recipes for you to enjoy. If you want to know 
+        how to make them by yourself, don't forget to click the links below. Enjoy!! 😊. </p>
+     
+    <img src="https://www.tastingtable.com/img/gallery/30-types-of-dips-explained/intro-1666108425.webp" alt="Dip recipes">
+    <h2> Dip recipes:</h2>
     <ul>
         <li><a href="./pages/guacamole.html">Guacamole</a></li>
         <li><a href="./pages/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
