--- a/pages/buffalo-chicken-dip.html
+++ b/pages/buffalo-chicken-dip.html
@@ -8,12 +8,29 @@
 </head>
 <body>
     <h1>Buffalo Chicken Dip</h1>
-    <img src="" alt="">
+    <p>This tangy, creamy Buffalo chicken dip tastes just like Buffalo chicken wings! Perfect for parties and game day, this chicken dip is best served hot with crackers and celery sticks. Everyone loves the results!</p>
+    <img src="https://www.allrecipes.com/thmb/rXG40C8xJ3NBRhSXaPRYRcM9rp4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3129023_Buffalo-Chicken-Dip_68461_Photo-by-Mackenzie-Schieck-2000-1c7639961077416db5e83a0b6d896be0.jpg" alt="buffalo-chicken-dip">
     <h2>Description</h2>
+    <p>Few appetizers bring a crowd together quite like warm, ooey-gooey, utterly irresistible Buffalo chicken dip. The Allrecipes community can't get enough of this easy Buffalo chicken dip with canned chicken — it has more than 4,000 rave reviews from happy home cooks. Find out what all the fuss is about with this top-rated recipe.</p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>2 (10 ounce) cans chunk chicken, drained</li>
+        <li>¾ cup hot pepper sauce (such as Frank's RedHot®)</li>
+        <li>2 (8 ounce) packages cream cheese, softened</li>
+        <li>1 cup ranch dressing</li>
+        <li>1 ½ cups shredded Cheddar cheese</li>
+        <li>1 bunch celery, cut into 4-inch pieces</li>
+        <li>1 (8 ounce) box chicken-flavored crackers</li>
+    </ul>
     <h2>Steps</h2>
     <ul>
-
+        <li><b>Step 1:</b> Heat chicken and hot pepper sauce in a skillet over medium heat until heated through, 3 to 5 minutes. Stir in cream cheese and ranch dressing. Cook and stir until well blended and warm, 3 to 5 minutes.</li>
+        <li><b>Step 2:</b> Mix in 1/2 of the Cheddar cheese, and transfer the mixture to a slow cooker. Sprinkle the remaining cheese over top.</li>
+        <li><b>Step 3:</b> Cover and cook on Low until dip is hot and bubbly, about 35 minutes.</li>    
+        <li><b>Step 4:</b> Serve with celery sticks and crackers.</li>
     </ul>
+    <br>
+    <a href="../index.html">Return Home</a>
+    <a href="https://www.allrecipes.com/recipe/68461/buffalo-chicken-dip/" target="_blank">Source</a>
 </body>
 </html>
