--- a/pages/guacamole.html
+++ b/pages/guacamole.html
@@ -8,12 +8,33 @@
 </head>
 <body>
     <h1>Guacamole</h1>
-    <img src="" alt="">
+     <p>This guacamole recipe gets a tasty kick from cayenne and 
+        cilantro. You can serve it smooth or chunky depending on 
+        your tastes.</p>
+    <img src="https://assets.unileversolutions.com/recipes-v2/93272.jpg?imwidth=900" alt="Guacamole">
     <h2>Description</h2>
+    <p> Guacamole is an avocado-based dip or spread that originated in 
+        Mexico. It's typically made with mashed avocado and lime juice, 
+        then seasoned with salt and cilantro. Guacamole often contains 
+        tomatoes and onions.</p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>3 avocados - peeled, pitted, and mashed</li>
+        <li>1 lime, juiced</li>
+        <li>1 teaspoon salt</li>
+        <li>2 roma (plum) tomatoes, diced</li>
+        <li>½ cup diced onion</li>
+        <li>3 tablespoons chopped fresh cilantro</li>
+        <li>1 teaspoon minced garlic</li>
+        <li>1 pinch ground cayenne pepper (Optional)</li>
+    </ul>
     <h2>Steps</h2>
     <ul>
-
+        <li><b>Step 1:</b> Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic. Stir in cayenne pepper.</li>
+        <li><b>Step 2:</b> Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</li>    
     </ul>
+    <br>
+    <a href="../index.html">Return Home</a>
+    <a href="https://www.allrecipes.com/recipe/14231/guacamole/" target="_blank">Source</a>
 </body>
 </html>
