--- a/pages/homemade-chili.html
+++ b/pages/homemade-chili.html
@@ -8,12 +8,30 @@
 </head>
 <body>
     <h1>Homemade Chili</h1>
-    <img src="" alt="">
+    <p>Homemade chili is delicious and goes great with cornbread or over 
+        corn chips for a chili pie! I like to use spicy pinto beans.</p>
+    <img src="https://www.allrecipes.com/thmb/Uj7OKr9vPqj3T1VkGFqSqNMPJHU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/16248_easy-homemade-chili_Rita-3x2-1-4f33fb2276d94056a8f253f575f5cca0.jpg" alt="Homemade-chili">
     <h2>Description</h2>
+    <p>This homemade chili is loaded with beef, beans, and crowd-pleasing flavor.</p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound ground beef</li>
+        <li>1 onion, chopped</li>
+        <li>1 (15 ounce) can tomato sauce</li>
+        <li>1 (15 ounce) can kidney beans</li>
+        <li>1 (14.5 ounce) can stewed tomatoes</li>
+        <li>1 ½ cups water</li>
+        <li>1 pinch chili powder</li>
+        <li>1 pinch garlic powder</li>
+        <li>Salt and pepper to taste</li>
+    </ul>
     <h2>Steps</h2>
     <ul>
-
+        <li><b>Step 1:</b> Place ground beef and onion in a large saucepan over medium heat; cook and stir until meat is browned and onion is tender, about 5 to 7 minutes.</li>
+        <li><b>Step 2:</b> Stir in tomato sauce, kidney beans, stewed tomatoes with juice, and water. Season with chili powder, garlic powder, salt, and black pepper. Bring to a boil, reduce heat to low, cover and let simmer for 15 minutes.</li>    
     </ul>
+    <br>
+    <a href="../index.html">Return Home</a>
+    <a href="https://www.allrecipes.com/recipe/16248/easy-homemade-chili/" target="_blank">Source</a>
 </body>
 </html>
